--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "imagesloaded": "^4.1.4",
     "masonry-layout": "^4.2.2",
     "materialize-css": "^1.0.0",
+    "net": "^1.0.2",
     "nuxt": "^2.0.0",
     "read-chunk": "^3.2.0",
+    "request": "^2.88.0",
     "sort-json-array": "^0.1.7",
+    "tls": "0.0.1",
+    "url-metadata": "^2.4.0",
     "vue-lazyload": "^1.3.2",
     "vue-moment": "^4.0.0"
   },
